2019-03-01  Florian Weimer  <fweimer@redhat.com>

	[BZ #20271]
	* sysdeps/unix/sysv/linux/netlink_assert_response.c
	(__netlink_assert_response): Add additional missing newlines.

2019-02-28  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c
	(__elf_machine_fixup_plt): Use space before '('.
	(__process_machine_rela): Likewise.
	* sysdeps/powerpc/powerpc32/register-dump.h (register_dump):
	Likewise.
	* sysdeps/powerpc/powerpc64/le/fpu/sfp-machine.h (TI_BITS):
	Likewise.
	* sysdeps/powerpc/powerpc64/register-dump.h (register_dump):
	Likewise.
	* sysdeps/powerpc/test-arith.c (union_t): Likewise.
	(pattern): Likewise.
	(delta): Likewise.
	(check_result): Likewise.
	(check_excepts): Likewise.
	(check_op): Likewise.
	(fail_xr): Likewise.
	* sysdeps/unix/alpha/sysdep.h (syscall_promote): Likewise.
	* sysdeps/unix/sysv/linux/alpha/a.out.h (AOUTHSZ): Likewise.
	(SCNHSZ): Likewise.
	* sysdeps/unix/sysv/linux/hppa/makecontext.c (FRAME_SIZE_BYTES):
	Likewise.
	(ARGS): Likewise.
	(__makecontext): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/sys/ucontext.h (ucontext_t):
	Likewise.

2019-02-28  Florian Weimer  <fweimer@redhat.com>

	[BZ #23937]
	elf: Add test with a local IFUNC resolver.
	* elf/ifuncmain9.c: New file.
	* elf/ifuncmain9pic.c: Likewise.
	* elf/ifuncmain9picstatic.c: Likewise.
	* elf/ifuncmain9pie.c: Likewise.
	* elf/ifuncmain9static.c: Likewise.
	* elf/Makefile [multi-arch] (tests-ifuncstatic): Add
	ifuncmain9static, ifuncmain9picstatic.
	* elf/Makefile [multi-arch && build-shared] (tests-internal):
	Add ifuncmain9, ifuncmain9pic.
	* elf/Makefile [multi-arch && build-shared && have-fpie]
	(ifunc-pie-tests): Add ifuncmain9pie.
	(CFLAGS-ifuncmain9pic.c): Add $(pic-ccflag).
	(CFLAGS-ifuncmain9picstatic.c): Likewise.
	(CFLAGS-ifuncmain9pie.c): Add $(pie-ccflag).

2019-02-27  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.ac (have-ifunc): New LIBC_CONFIG_VAR.
	* configure: Regenerated.